--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-animated-css": "^1.2.1",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-icons": "^3.10.0",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
