--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
+    "axios": "^0.21.0",
     "contentful": "^7.14.6",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
@@ -41,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
